# advent-of-code-2016

2017/WFUtil/: WFUtil.cabal
2017/WFUtil/src/WFUtil/: Parser.hs
2017/WFUtil/test/WFUtil/: ParserSpec.hs
2018/d10/: Makefile  d10.rb  d10_spec.rb
2019/d11/: main.rs
2020/d15/: d15.jl  d15.rb
app/: D1.hs
src/: D14Lib.hs
test/: D14Spec.hs
